--- a/peerinst/templates/peerinst/question_search_results.html
+++ b/peerinst/templates/peerinst/question_search_results.html
@@ -35,10 +35,10 @@
         {% endfor %}
         </div>
         <div>
-        {% trans 'Popularity' %}:
+        {% trans 'Popularity' %}: --
         </div>
         <div>
-        {% trans 'Difficulty' %}:
+        {% trans 'Difficulty' %}: --
         </div>
       </div>
     </div>
