with return for each

--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -114,6 +114,10 @@
 
 <h2 class="mdc-typography--display1 mdc-theme--secondary">{% trans 'All your blinks' %}</h2>
 
+<div class="admin-link">
+  <a href="#assignment">{% trans 'Return to top' %}</a>
+</div>
+
 <div class="search">
   <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
     <label class="mdc-floating-label" for="filter-bar">{% trans 'Filter' %}</label>
