swap out popularity for discipline

--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -61,7 +61,10 @@
 
     <div class="mdc-card__action-buttons" style="color:grey;">
       <div class="mdc-typography--caption">
-        <div style="margin-bottom:0pt;">
+        <div>
+          {% trans 'Discipline' %}: {{g.blinkquestion.question.discipline}}
+        </div>
+        <div>
           {% trans 'Categories' %}:
           {% for c in g.blinkquestion.question.category.all %}
           {{ c.title|safe }}{% if not forloop.last %}, {% endif %}
@@ -70,10 +73,7 @@
           {% endfor %}
         </div>
         <div>
-          {% trans 'Popularity' %}: --
-        </div>
-        <div>
-          {% trans 'Difficulty' %}: --
+          {% trans 'Difficulty' %}:
         </div>
       </div>
     </div>
@@ -162,7 +162,10 @@
 
         <div class="mdc-card__action-buttons" style="color:grey;">
           <div class="mdc-typography--caption">
-            <div style="margin-bottom:0pt;">
+            <div>
+              {% trans 'Discipline' %}: {{g.question.discipline}}
+            </div>
+            <div>
               {% trans 'Categories' %}:
               {% for c in g.question.category.all %}
               {{ c.title|safe }}{% if not forloop.last %}, {% endif %}
@@ -171,10 +174,7 @@
               {% endfor %}
             </div>
             <div>
-              {% trans 'Popularity' %}: --
-            </div>
-            <div>
-              {% trans 'Difficulty' %}: --
+              {% trans 'Difficulty' %}: 
             </div>
           </div>
         </div>
