--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -22,140 +22,138 @@
       data-toggle-on='{"label": "Hide images", "content": "check_box"}'
       data-toggle-off='{"label": "Show images", "content": "check_box_outline_blank"}'>
       check_box_outline_blank
-    </i>
-  </div>
+      </i>
+    </div>
 
-  <div class="mdc-form-field">
-    <span class="mdc-theme--secondary">Show answers</span>
-    <i class="mdc-icon-toggle material-icons toggle-answers mdc-theme--secondary" role="button" aria-pressed="false"
-    aria-label="Toggle answers" tabindex="0"
-    data-toggle-on='{"label": "Hide images", "content": "check_box"}'
-    data-toggle-off='{"label": "Show images", "content": "check_box_outline_blank"}'>
-    check_box_outline_blank
-  </i>
-</div>
+    <div class="mdc-form-field">
+      <span class="mdc-theme--secondary">Show answers</span>
+      <i class="mdc-icon-toggle material-icons toggle-answers mdc-theme--secondary" role="button" aria-pressed="false"
+      aria-label="Toggle answers" tabindex="0"
+      data-toggle-on='{"label": "Hide images", "content": "check_box"}'
+      data-toggle-off='{"label": "Show images", "content": "check_box_outline_blank"}'>
+      check_box_outline_blank
+      </i>
+    </div>
 
-{% for g in object.blinkassignmentquestion_set.all %}
-<div class="mdc-card" id={{g.blinkquestion.question.id|slugify}}>
-  <div class="mdc-typography--title bold" style="margin-bottom:5px;">
-    {{g.blinkquestion.question.title|safe}}
-  </div>
+    {% for g in object.blinkassignmentquestion_set.all %}
+    <div class="mdc-card" id={{g.blinkquestion.question.id|slugify}}>
+      <div class="mdc-typography--title bold" style="margin-bottom:5px;">
+        {{g.blinkquestion.question.title|safe}}
+      </div>
 
-  <div class="mdc-typography--body1">
-    {{g.blinkquestion.question.text|safe}}
-  </div>
+      <div class="mdc-typography--body1">
+        {{g.blinkquestion.question.text|safe}}
+      </div>
 
-  {% if g.blinkquestion.question.image %}
-  <img class="question-image" src="{{ g.blinkquestion.question.image.url }}" alt="g.blinkquestion.question.image_alt_text">
-  {% endif %}
+      {% if g.blinkquestion.question.image %}
+      <img class="question-image" src="{{ g.blinkquestion.question.image.url }}" alt="g.blinkquestion.question.image_alt_text">
+      {% endif %}
 
-  <div class="question-answers" style="display:none;">
-    <ul>
-      {% for label, choice in g.blinkquestion.question.get_choices %}
-      <li class="mdc-typography--body1">{{ label }}. {{ choice|safe }}</li>
-      {% endfor %}
-    </ul>
-  </div>
-
-  <div class="mdc-card__actions">
-
-    <div class="mdc-card__action-buttons" style="color:grey;">
-      <div class="mdc-typography--caption">
-        <div>
-          {% trans 'Discipline' %}: {{g.blinkquestion.question.discipline}}
-        </div>
-        <div>
-          {% trans 'Categories' %}:
-          {% for c in g.blinkquestion.question.category.all %}
-          {{ c.title|safe }}{% if not forloop.last %}, {% endif %}
-          {% empty %}
-          {% trans 'Uncategorized' %}
+      <div class="question-answers" style="display:none;">
+        <ul>
+          {% for label, choice in g.blinkquestion.question.get_choices %}
+          <li class="mdc-typography--body1">{{ label }}. {{ choice|safe }}</li>
           {% endfor %}
+        </ul>
+      </div>
+
+      <div class="mdc-card__actions">
+        <div class="mdc-card__action-buttons" style="color:grey;">
+          <div class="mdc-typography--caption">
+            <div>
+              {% trans 'Discipline' %}: {{g.blinkquestion.question.discipline}}
+            </div>
+            <div>
+              {% trans 'Categories' %}:
+              {% for c in g.blinkquestion.question.category.all %}
+              {{ c.title|safe }}{% if not forloop.last %}, {% endif %}
+              {% empty %}
+              {% trans 'Uncategorized' %}
+              {% endfor %}
+            </div>
+            <div>
+              {% trans 'Difficulty' %}:
+            </div>
+          </div>
         </div>
-        <div>
-          {% trans 'Difficulty' %}:
+
+        <div class="mdc-card__action-icons">
+          <form style="display:inline;" method="post" action="#">
+            {% csrf_token %}
+            <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
+            <input type="hidden" name="rank" value="clear" />
+            <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="clear"/>
+          </form>
+          {% if forloop.counter > 1 %}
+          <form style="display:inline;" method="post" action="#{{g.blinkquestion.question.id|slugify}}">
+            {% csrf_token %}
+            <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
+            <input type="hidden" name="rank" value="up" />
+            <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_upward" />
+          </form>
+          {% endif %}
+          {% if not forloop.last %}
+          <form style="display:inline;" method="post" action="#{{g.blinkquestion.question.id|slugify}}">
+            {% csrf_token %}
+            <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
+            <input type="hidden" name="rank" value="down" />
+            <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_downward" />
+          </form>
+          {% endif %}
         </div>
       </div>
     </div>
-
-    <div class="mdc-card__action-icons">
-      <form style="display:inline;" method="post" action="#">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="clear" />
-        <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="clear"/>
-      </form>
-      {% if forloop.counter > 1 %}
-      <form style="display:inline;" method="post" action="#{{g.blinkquestion.question.id|slugify}}">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="up" />
-        <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_upward" />
-      </form>
-      {% endif %}
-      {% if not forloop.last %}
-      <form style="display:inline;" method="post" action="#{{g.blinkquestion.question.id|slugify}}">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{g.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="down" />
-        <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_downward" />
-      </form>
-      {% endif %}
-    </div>
-
-  </div>
-</div>
-{% empty %}
-<ul>
-  <li><strong>Note:</strong> {% blocktrans %}There are currently no blink questions in this script.  You can add them from the lists below.{% endblocktrans %}</li>
-</ul>
-{% endfor %}
-
-
-<h2 class="mdc-typography--display1 mdc-theme--secondary">{% trans 'All your blinks' %}</h2>
-
-<div class="admin-link">
-  <a href="#assignment">{% trans 'Return to top' %}</a>
-</div>
-
-<div class="search">
-  <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-    <label class="mdc-floating-label" for="filter-bar">{% trans 'Filter' %}</label>
-    <input class="mdc-text-field__input" id="filter-bar">
-    <div class="mdc-notched-outline">
-      <svg>
-        <path class="mdc-notched-outline__path"/>
-      </svg>
-    </div>
-    <div class="mdc-notched-outline__idle"></div>
-  </div>
-  <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
-    The list will be filtered to retain entries with content that contains the above string.
-  </p>
-</div>
-
-{% for g in teacher.blinkquestion_set.all %}
-{% if not g in object.blinkquestions.all %}
-
-<div class="mdc-card searchable" id={{g.question.id|slugify}}>
-  <div class="mdc-typography--title bold" style="margin-bottom:5px;">
-    {{g.question.title|safe}}
-  </div>
-
-  <div class="mdc-typography--body1">
-    {{g.question.text|safe}}
-  </div>
-
-  {% if g.question.image %}
-  <img class="question-image" src="{{ g.question.image.url }}" alt="g.question.image_alt_text">
-  {% endif %}
-
-  <div class="question-answers" style="display:none;">
+    {% empty %}
     <ul>
-      {% for label, choice in g.question.get_choices %}
-      <li class="mdc-typography--body1">{{ label }}. {{ choice|safe }}</li>
-      {% endfor %}
-      <ul>
+      <li><strong>Note:</strong> {% blocktrans %}There are currently no blink questions in this script.  You can add them from the lists below.{% endblocktrans %}</li>
+    </ul>
+    {% endfor %}
+
+
+    <h2 class="mdc-typography--display1 mdc-theme--secondary">{% trans 'All your blinks' %}</h2>
+
+    <div class="admin-link">
+      <a href="#assignment">{% trans 'Return to top' %}</a>
+    </div>
+
+    <div class="search">
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+        <label class="mdc-floating-label" for="filter-bar">{% trans 'Filter' %}</label>
+        <input class="mdc-text-field__input" id="filter-bar">
+        <div class="mdc-notched-outline">
+          <svg>
+            <path class="mdc-notched-outline__path"/>
+          </svg>
+        </div>
+        <div class="mdc-notched-outline__idle"></div>
+      </div>
+      <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
+        The list will be filtered to retain entries with content that contains the above string.
+      </p>
+    </div>
+
+    {% for g in teacher.blinkquestion_set.all %}
+    {% if not g in object.blinkquestions.all %}
+
+    <div class="mdc-card searchable" id={{g.question.id|slugify}}>
+      <div class="mdc-typography--title bold" style="margin-bottom:5px;">
+        {{g.question.title|safe}}
+      </div>
+
+      <div class="mdc-typography--body1">
+        {{g.question.text|safe}}
+      </div>
+
+      {% if g.question.image %}
+      <img class="question-image" src="{{ g.question.image.url }}" alt="g.question.image_alt_text">
+      {% endif %}
+
+      <div class="question-answers" style="display:none;">
+        <ul>
+        {% for label, choice in g.question.get_choices %}
+        <li class="mdc-typography--body1">{{ label }}. {{ choice|safe }}</li>
+        {% endfor %}
+        <ul>
       </div>
 
       <div class="mdc-card__actions">
@@ -174,7 +172,7 @@
               {% endfor %}
             </div>
             <div>
-              {% trans 'Difficulty' %}: 
+              {% trans 'Difficulty' %}:
             </div>
           </div>
         </div>
@@ -186,10 +184,8 @@
             <input class="material-icons small-button mdc-button mdc-card__action mdc-card__action--button mdc-button--raised" type="submit" value="add" />
           </form>
         </div>
-
       </div>
     </div>
-
     {% endif %}
     {% empty %}
     <ul>
@@ -216,32 +212,32 @@
           fill="none"
           stroke="white"
           d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
-        </svg>
-        <div class="mdc-checkbox__mixedmark"></div>
+          </svg>
+          <div class="mdc-checkbox__mixedmark"></div>
+        </div>
       </div>
+      <label class="mdc-theme--secondary" for="limit-search">{% trans 'Limit search to questions in your discipline(s) (recommended)' %}</label>
     </div>
-    <label class="mdc-theme--secondary" for="limit-search">{% trans 'Limit search to questions in your discipline(s) (recommended)' %}</label>
-  </div>
-  <br>
-  <div class="search">
-    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-      <label class="mdc-floating-label" for="search-bar">{% trans 'Search' %}</label>
-      <input class="mdc-text-field__input" id="search-bar">
-      <div class="mdc-notched-outline">
-        <svg>
-          <path class="mdc-notched-outline__path"/>
-        </svg>
+    <br>
+    <div class="search">
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+        <label class="mdc-floating-label" for="search-bar">{% trans 'Search' %}</label>
+        <input class="mdc-text-field__input" id="search-bar">
+        <div class="mdc-notched-outline">
+          <svg>
+            <path class="mdc-notched-outline__path"/>
+          </svg>
+        </div>
+        <div class="mdc-notched-outline__idle"></div>
       </div>
-      <div class="mdc-notched-outline__idle"></div>
+      <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
+        {% trans 'Search database for questions containing above string.' %}'
+      </p>
     </div>
-    <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
-      {% trans 'Search database for questions containing above string.' %}'
-    </p>
-  </div>
 
-  <div id="search_results"></div>
+    <div id="search_results"></div>
 
-</section>
+  </section>
 </main>
 {% endblock %}
 
@@ -259,6 +255,9 @@ filterBar.oninput = function() {
 }
 
 function processResponse(text, status, obj) {
+  console.info(text);
+  console.info(status);
+  console.info(obj);
   location.href = "#limit-search";
   bundle.toggleImages();
   bundle.toggleAnswers();
@@ -268,7 +267,7 @@ function processResponse(text, status, obj) {
 
 search.onchange = function() {
   console.info("Searching: "+search.value);
-  $('#search_results').load("{% url 'question-search' %}", "search_string="+search.value+"&type=blink&id="+{{ object.id }}+"&limit_search="+limitSearch.checked, processResponse);
+  $('#search_results').load("{% url 'question-search' %}", "search_string="+search.value+"&type=blink&id={{ object.id }}&limit_search="+limitSearch.checked, processResponse);
 }
 </script>
 {% endblock %}
