--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -17,6 +17,13 @@ header a {
 }
 footer {
   background-image: linear-gradient(0deg,var(--mdc-theme-secondary) 0%, var(--mdc-theme-secondary) 90%, var(--mdc-theme-primary) 90%);
+  color: white;
+  padding-top: 5px;
+  padding-bottom:5px;
+}
+footer a {
+  color: white;
+  padding-left:10px;
 }
 main {
   max-width: 900px;
@@ -255,6 +262,10 @@ input[type="submit"].thumbs-down {
    width:25px;
    max-height:25px;
    cursor: pointer;
+}
+.mdc-typography--display3 {
+  position:sticky;
+  position:-webkit-sticky;
 }
 .mdc-list-item__meta i{
   vertical-align: middle;
