--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -245,11 +245,11 @@
 <script>
 bundle.toggleImages();
 bundle.toggleAnswers();
-const limitSearch = document.querySelector('#limit-search');
+var limitSearch = document.querySelector('#limit-search');
 bundle.iconToggle.MDCIconToggle.attachTo(limitSearch);
-const search = document.getElementById('search-bar');
+var search = document.getElementById('search-bar');
 
-const filterBar = document.getElementById('filter-bar');
+var filterBar = document.getElementById('filter-bar');
 filterBar.oninput = function() {
   bundle.search('.searchable', filterBar);
 }
