--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -13,8 +13,7 @@
   <!-- Local resources -->
   <link href="{% static 'peerinst/img/logo.png' %}" rel="icon">
   {% compress css %}
-  <link href="{% static 'peerinst/css/material-components-web.min.css' %}" rel="stylesheet">
-  <link href="{% static 'peerinst/css/main.css' %}" rel="stylesheet">
+  <link href="{% static 'peerinst/css/main.min.css' %}" rel="stylesheet">
   {% endcompress %}
 
   <!-- External resources -->
