--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -24,6 +24,7 @@ header {
 .mdc-chip-set {
   width: fit-content;
   width: -moz-fit-content;
+  width: -webkit-fit-content;
   margin-right:0pt;
   margin-left: auto;
 }
