--- a/peerinst/templates/peerinst/assignment_detail.html
+++ b/peerinst/templates/peerinst/assignment_detail.html
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
   <section>
-    <h1 class="mdc-typography--display3" style="position:sticky;">Update Assignment
+    <h1 class="mdc-typography--display3">Update Assignment
       <svg class="underline" width=150 height=4></svg>
     </h1>
 
