--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
   <section>
-    <h1 class="mdc-typography--display3" style="position:sticky;">{% trans 'Update Script' %}
+    <h1 class="mdc-typography--display3">{% trans 'Update Script' %}
       <svg class="underline" width=150 height=4></svg>
     </h1>
 
